Finish header w/o animations

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,6 +9,7 @@ $root: $path;
 /* -------------------------------------------------------------------------- */
 $font-primary: "Amiko", serif;
 $font-secondary: "Spartan", sans-serif;
+$font-drawn: "Delicious Handrawn", sans-serif;
 // $font-primary: var(--wp--preset--font-family--primary); // sofia
 // $font-secondary: var(--wp--preset--font-family--secondary); // dm sans
 
