--- a/style.css
+++ b/style.css
@@ -256,13 +256,18 @@ Text Domain: julian2025
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	padding: 30px;
 	background-color: #fff;
 	border-top-left-radius: 7px;
 	border-top-right-radius: 7px;
 }
-.my-card__pfp-container {
-	text-align: center;
+.my-card__middle {
+	padding: 0 30px 30px 30px;
+}
+.my-card__pfp {
+	padding: 33px 5px 5px;
+	display: grid;
+	grid-template-columns: 1fr 112px 1fr;
+	justify-content: center;
 }
 .my-card__contacts {
 	display: block;
@@ -273,22 +278,26 @@ Text Domain: julian2025
 	gap: 19px;
 }
 .my-card__contact-link {
+	cursor: pointer;
+	position: relative;
 	display: block;
 	text-align: center;
 	background-color: #e7e7e7;
 	padding: 15px 20px 15px 35px;
 	border-radius: 25px;
-	position: relative;
 	font-family: "Spartan", sans-serif;
 	font-weight: 500;
 	font-size: 14px;
 	text-align: center;
 	text-decoration: none;
 	color: #000;
-	cursor: pointer;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	transition: background-color 0.15s ease;
+}
+.my-card__contact-link:hover {
+	background-color: rgb(218.25, 218.25, 218.25);
 }
 .my-card__contact-icon {
 	position: absolute;
@@ -322,7 +331,7 @@ Text Domain: julian2025
 	background-color: #51659b;
 	border-bottom-left-radius: 7px;
 	border-bottom-right-radius: 7px;
-	padding: 15px 30px;
+	padding: 12px 30px;
 	color: #fff;
 	font-family: "Spartan", sans-serif;
 	text-transform: uppercase;
@@ -331,6 +340,10 @@ Text Domain: julian2025
 	line-height: 1.5;
 	text-align: center;
 	letter-spacing: 2px;
+	transition: background-color 0.15s ease;
+}
+.my-card__vcf-btn:hover {
+	background-color: rgb(72.2478813559, 90.0868644068, 138.2521186441);
 }
 .my-card__vcf-icon {
 	color: #fff;
@@ -361,12 +374,73 @@ Text Domain: julian2025
 	text-fill-color: transparent;
 }
 
-.pfp {
+/*!
+Theme Name: Julian 2025
+Theme URI: https://julianhernandez.me/
+Author: Julian Hernandez
+Author URI: https://julianhernandez./
+Description: A portfolio site for Julian Hernandez
+Version: 1.0.0
+Text Domain: julian2025
+*/
+.pfp__image {
 	border-radius: 50%;
 	width: 112px;
 	height: 112px;
 	-o-object-fit: cover;
 	   object-fit: cover;
+}
+.pfp__quip {
+	position: relative;
+}
+.pfp__quip--one .pfp__quip-text {
+	-webkit-transform: rotate(22deg);
+	        transform: rotate(22deg);
+	position: relative;
+	right: -20px;
+}
+.pfp__quip--one .pfp__quip-arrow {
+	-webkit-transform: rotate(7deg);
+	        transform: rotate(7deg);
+	position: absolute;
+	right: -10px;
+	top: -10px;
+}
+.pfp__quip--two {
+	display: flex;
+	gap: 20px;
+	margin-top: 15px;
+}
+.pfp__quip--two .pfp__quip-text {
+	-webkit-transform: rotate(-15deg);
+	        transform: rotate(-15deg);
+	position: relative;
+	top: 10px;
+	right: -20px;
+}
+.pfp__quip--two .pfp__quip-arrow {
+	-webkit-transform: rotate(15deg);
+	        transform: rotate(15deg);
+}
+.pfp__quip--three .pfp__quip-text {
+	position: relative;
+	bottom: -40px;
+	right: -30%;
+	-webkit-transform: rotate(-18deg);
+	        transform: rotate(-18deg);
+	font-size: 16px;
+}
+.pfp__quip--three .pfp__quip-arrow {
+	-webkit-transform: rotate(-18deg);
+	        transform: rotate(-18deg);
+	position: absolute;
+	left: 10px;
+	bottom: -10px;
+}
+.pfp__quip-text {
+	font-family: "Delicious Handrawn", sans-serif;
+	font-size: 14px;
+	line-height: 1.5;
 }
 
 /*!
