Make above the fold responsive

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -10,6 +10,12 @@
   }
 }
 
+@mixin between($sizemin, $sizemax) {
+  @media (min-width: $sizemin) and (max-width: $sizemax) {
+    @content;
+  }
+}
+
 /* -------------------------------------------------------------------------- */
 /*                                   Resets                                   */
 /* -------------------------------------------------------------------------- */
