--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ Text Domain: julian2025
 /*                                   Helpers                                  */
 /* -------------------------------------------------------------------------- */
 /* -------------------------------------------------------------------------- */
-/*                                    Sizes                                   */
+/*                             Global Breakpoints                             */
 /* -------------------------------------------------------------------------- */
 /* -------------------------------------------------------------------------- */
 /*                                   Columns                                  */
@@ -252,6 +252,18 @@ Text Domain: julian2025
 	width: 400px;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+@media (min-width: 600px) and (max-width: 820px) {
+	.my-card {
+		width: 100%;
+		max-width: 100%;
+	}
+}
+@media screen and (max-width: 500px) {
+	.my-card {
+		width: 100%;
+		max-width: 100%;
+	}
+}
 .my-card__main {
 	justify-content: center;
 	align-items: center;
@@ -260,14 +272,30 @@ Text Domain: julian2025
 	border-top-left-radius: 7px;
 	border-top-right-radius: 7px;
 }
+@media (min-width: 600px) and (max-width: 820px) {
+	.my-card__main {
+		border-radius: 7px;
+	}
+}
 .my-card__middle {
 	padding: 0 30px 30px 30px;
 }
+@media (min-width: 600px) and (max-width: 820px) {
+	.my-card__middle {
+		padding: 0 15px 25px 15px;
+	}
+}
 .my-card__pfp {
 	padding: 33px 5px 5px;
-	display: grid;
-	grid-template-columns: 1fr 112px 1fr;
-	justify-content: center;
+}
+.my-card__myname {
+	margin-top: 18px;
+	margin-bottom: 25px;
+}
+@media (min-width: 600px) and (max-width: 820px) {
+	.my-card__myname {
+		margin-bottom: 15px;
+	}
 }
 .my-card__contacts {
 	display: block;
@@ -276,6 +304,12 @@ Text Domain: julian2025
 .my-card__contacts-list {
 	display: grid;
 	gap: 19px;
+}
+@media (min-width: 600px) and (max-width: 820px) {
+	.my-card__contacts-list {
+		display: flex;
+		justify-content: center;
+	}
 }
 .my-card__contact-link {
 	cursor: pointer;
@@ -299,6 +333,16 @@ Text Domain: julian2025
 .my-card__contact-link:hover {
 	background-color: rgb(218.25, 218.25, 218.25);
 }
+@media (min-width: 600px) and (max-width: 820px) {
+	.my-card__contact-link {
+		padding: 0;
+		height: 52px;
+		width: 72px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+}
 .my-card__contact-icon {
 	position: absolute;
 	left: 15px;
@@ -314,6 +358,11 @@ Text Domain: julian2025
 	width: 100%;
 	height: 100%;
 }
+@media (min-width: 600px) and (max-width: 820px) {
+	.my-card__contact-icon {
+		position: static;
+	}
+}
 .my-card__contact-link-text {
 	line-height: 1.3;
 	display: inline-block;
@@ -322,6 +371,11 @@ Text Domain: julian2025
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+}
+@media (min-width: 600px) and (max-width: 820px) {
+	.my-card__contact-link-text {
+		display: none;
+	}
 }
 .my-card__vcf-btn {
 	display: flex;
@@ -345,6 +399,11 @@ Text Domain: julian2025
 .my-card__vcf-btn:hover {
 	background-color: rgb(72.2478813559, 90.0868644068, 138.2521186441);
 }
+@media (min-width: 600px) and (max-width: 820px) {
+	.my-card__vcf-btn {
+		display: none;
+	}
+}
 .my-card__vcf-icon {
 	color: #fff;
 }
@@ -360,8 +419,6 @@ Text Domain: julian2025
 	letter-spacing: 4px;
 	text-transform: uppercase;
 	-webkit-font-smoothing: antialiased;
-	margin-top: 18px;
-	margin-bottom: 25px;
 	line-height: 1.3;
 }
 .myname__text {
@@ -383,6 +440,12 @@ Description: A portfolio site for Julian Hernandez
 Version: 1.0.0
 Text Domain: julian2025
 */
+.pfp {
+	position: relative;
+	display: grid;
+	grid-template-columns: 1fr 112px 1fr;
+	justify-content: center;
+}
 .pfp__image {
 	border-radius: 50%;
 	width: 112px;
@@ -390,7 +453,7 @@ Text Domain: julian2025
 	-o-object-fit: cover;
 	   object-fit: cover;
 }
-.pfp__quip {
+.pfp__quip-container {
 	position: relative;
 }
 .pfp__quip--one .pfp__quip-text {
@@ -405,6 +468,22 @@ Text Domain: julian2025
 	position: absolute;
 	right: -10px;
 	top: -10px;
+}
+@media screen and (max-width: 820px) {
+	.pfp__quip--one .pfp__quip-text {
+		-webkit-transform: rotate(22deg);
+		        transform: rotate(22deg);
+		position: absolute;
+		right: 10px;
+		top: -5px;
+	}
+	.pfp__quip--one .pfp__quip-arrow {
+		-webkit-transform: rotate(7deg);
+		        transform: rotate(7deg);
+		position: absolute;
+		right: -10px;
+		top: -10px;
+	}
 }
 .pfp__quip--two {
 	display: flex;
@@ -422,6 +501,19 @@ Text Domain: julian2025
 	-webkit-transform: rotate(15deg);
 	        transform: rotate(15deg);
 }
+@media screen and (max-width: 820px) {
+	.pfp__quip--two .pfp__quip-text {
+		position: absolute;
+		top: unset;
+		bottom: 0;
+		right: 40px;
+	}
+	.pfp__quip--two .pfp__quip-arrow {
+		position: absolute;
+		right: 3px;
+		bottom: 25px;
+	}
+}
 .pfp__quip--three .pfp__quip-text {
 	position: relative;
 	bottom: -40px;
@@ -435,12 +527,113 @@ Text Domain: julian2025
 	        transform: rotate(-18deg);
 	position: absolute;
 	left: 10px;
-	bottom: -10px;
+	top: 20px;
+}
+@media screen and (max-width: 820px) {
+	.pfp__quip--three .pfp__quip-text {
+		position: absolute;
+		bottom: 12px;
+		left: 30px;
+	}
+	.pfp__quip--three .pfp__quip-arrow {
+		-webkit-transform: rotate(-6deg);
+		        transform: rotate(-6deg);
+		position: absolute;
+		left: 10px;
+		bottom: 60px;
+	}
 }
 .pfp__quip-text {
+	display: table;
 	font-family: "Delicious Handrawn", sans-serif;
 	font-size: 14px;
 	line-height: 1.5;
+	color: #000;
+}
+.pfp__bubble {
+	position: absolute;
+	pointer-events: none;
+	opacity: 0;
+	-webkit-transform: translateY(20%);
+	        transform: translateY(20%);
+	bottom: 82%;
+	left: 47%;
+	width: 175px;
+	height: 100px;
+	z-index: 1;
+}
+.pfp__bubble--show {
+	-webkit-animation: bubble-in-out 7s ease-in-out;
+	        animation: bubble-in-out 7s ease-in-out;
+}
+@-webkit-keyframes bubble-in-out {
+	0% {
+		opacity: 0;
+		-webkit-transform: translateY(0) scale(0.5);
+		        transform: translateY(0) scale(0.5);
+	}
+	5% {
+		opacity: 1;
+		-webkit-transform: translateY(0) scale(1.2);
+		        transform: translateY(0) scale(1.2);
+	}
+	7% {
+		opacity: 1;
+		-webkit-transform: translateY(0) scale(1);
+		        transform: translateY(0) scale(1);
+	}
+	90% {
+		opacity: 1;
+		-webkit-transform: translateY(0) scale(1);
+		        transform: translateY(0) scale(1);
+	}
+	100% {
+		opacity: 0;
+		-webkit-transform: translateY(0) scale(0.5);
+		        transform: translateY(0) scale(0.5);
+	}
+}
+@keyframes bubble-in-out {
+	0% {
+		opacity: 0;
+		-webkit-transform: translateY(0) scale(0.5);
+		        transform: translateY(0) scale(0.5);
+	}
+	5% {
+		opacity: 1;
+		-webkit-transform: translateY(0) scale(1.2);
+		        transform: translateY(0) scale(1.2);
+	}
+	7% {
+		opacity: 1;
+		-webkit-transform: translateY(0) scale(1);
+		        transform: translateY(0) scale(1);
+	}
+	90% {
+		opacity: 1;
+		-webkit-transform: translateY(0) scale(1);
+		        transform: translateY(0) scale(1);
+	}
+	100% {
+		opacity: 0;
+		-webkit-transform: translateY(0) scale(0.5);
+		        transform: translateY(0) scale(0.5);
+	}
+}
+.pfp__bubble-blockquote {
+	background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/speech-bubble.svg);
+	padding-top: 22%;
+	padding-bottom: 0;
+	font-family: "Bangers", sans-serif;
+	background-position: center;
+	background-repeat: no-repeat !important;
+	background-size: 100% 100%;
+	margin: 0 auto;
+	text-align: center;
+	width: 100%;
+	height: 100%;
+	box-sizing: content-box;
+	line-height: 1;
 }
 
 /*!
@@ -502,7 +695,6 @@ Text Domain: julian2025
 	position: fixed;
 	top: 20px;
 	right: 20px;
-	background-color: #fff;
 	height: 34px;
 	width: 45px;
 	display: flex;
@@ -510,11 +702,38 @@ Text Domain: julian2025
 	align-items: center;
 	border-radius: 7px;
 	cursor: pointer;
+	-webkit-filter: brightness(100%) invert(100%);
+	        filter: brightness(100%) invert(100%);
+	transition: opacity 0.15s ease-in-out, -webkit-filter 0.3s ease;
+	transition: filter 0.3s ease, opacity 0.15s ease-in-out;
+	transition: filter 0.3s ease, opacity 0.15s ease-in-out, -webkit-filter 0.3s ease;
 }
 .idcta:focus {
 	outline: none;
 	outline-style: none;
 	outline-color: transparent;
+}
+.idcta::before {
+	content: "";
+	position: absolute;
+	top: 5px;
+	right: 0;
+	bottom: 0;
+	left: -5px;
+	margin: auto;
+	height: 17px;
+	width: 22px;
+	border-radius: 3px;
+	z-index: -1;
+	opacity: 0;
+	background-color: rgba(0, 0, 0, 0.3);
+}
+.idcta--open {
+	-webkit-filter: brightness(0) invert(0);
+	        filter: brightness(0) invert(0);
+}
+.idcta--open::before {
+	opacity: 1;
 }
 .idcta__icon {
 	display: flex;
@@ -548,11 +767,27 @@ Text Domain: julian2025
 	min-height: 100vh;
 	background: radial-gradient(50% 50% at 50% 50%, #0b2362 0%, #3a4f89 0%, #222429 97.37%);
 }
+@media screen and (max-width: 820px) {
+	.header {
+		align-items: start;
+		padding-top: 6vh;
+		background: radial-gradient(50% 50% at 50% 50%, #0b2362 0%, #3a4f89 0%, #222429 88.65%);
+	}
+}
+@media screen and (max-width: 600px) {
+	.header .header__my-card .pfp__quip {
+		display: none;
+	}
+	.header__content-mobile-container .pfp__quip-container {
+		-webkit-filter: brightness(1) invert(80%);
+		        filter: brightness(1) invert(80%);
+	}
+}
 .header__idcta {
 	display: none;
-	z-index: 1;
+	z-index: 2;
 }
-@media screen and (max-width: 730px) {
+@media screen and (max-width: 600px) {
 	.header__idcta {
 		display: block;
 	}
@@ -561,8 +796,14 @@ Text Domain: julian2025
 	transition: -webkit-clip-path 0.2s ease-in-out;
 	transition: clip-path 0.2s ease-in-out;
 	transition: clip-path 0.2s ease-in-out, -webkit-clip-path 0.2s ease-in-out;
+	z-index: 1;
 }
-@media screen and (max-width: 730px) {
+@media screen and (max-width: 820px) {
+	.header__my-card {
+		margin-bottom: 40px;
+	}
+}
+@media screen and (max-width: 600px) {
 	.header__my-card {
 		position: fixed;
 		top: 20px;
@@ -581,7 +822,12 @@ Text Domain: julian2025
 	justify-content: center;
 	align-items: center;
 }
-@media screen and (max-width: 730px) {
+@media screen and (max-width: 820px) {
+	.header__inner {
+		flex-direction: column;
+	}
+}
+@media screen and (max-width: 600px) {
 	.header__inner {
 		flex-direction: column;
 	}
@@ -596,13 +842,21 @@ Text Domain: julian2025
 		margin-left: 4vw;
 	}
 }
+@media screen and (max-width: 820px) {
+	.header__content-section {
+		margin-left: 0;
+	}
+}
 .header__content-mobile-container {
 	display: none;
 }
-@media screen and (max-width: 730px) {
+@media screen and (max-width: 600px) {
 	.header__content-mobile-container {
 		display: block;
 	}
+}
+.header__mobile-name-container {
+	margin-top: 20px;
 }
 .header__mobile-name {
 	display: block;
@@ -648,7 +902,7 @@ Text Domain: julian2025
 		font-size: 32px;
 	}
 }
-@media screen and (max-width: 730px) {
+@media screen and (max-width: 600px) {
 	.header__title {
 		font-size: 48px;
 	}
