--- a/sass/components/_idcta.scss
+++ b/sass/components/_idcta.scss
@@ -5,7 +5,7 @@
   position: fixed;
   top: 20px;
   right: 20px;
-  background-color: #fff;
+  // background-color: #fff;
   height: 34px;
   width: 45px;
   display: flex;
@@ -14,6 +14,34 @@
   border-radius: $border-radius;
   // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
+  filter: brightness(100%) invert(100%);
+  transition:
+    filter 0.3s ease,
+    opacity 0.15s ease-in-out;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 5px;
+    right: 0;
+    bottom: 0;
+    left: -5px;
+    margin: auto;
+    height: 17px;
+    width: 22px;
+    border-radius: 3px;
+    z-index: -1;
+    opacity: 0;
+    background-color: rgba(#000000, 0.3);
+  }
+
+  &--open {
+    filter: brightness(0) invert(0);
+
+    &::before {
+      opacity: 1;
+    }
+  }
 
   &__icon {
     display: flex;
