Add skill orbit to desktop

--- a/sass/components/_pfp.scss
+++ b/sass/components/_pfp.scss
@@ -25,7 +25,8 @@
       #{$self}__quip-text {
         transform: rotate(22deg);
         position: relative;
-        right: -20px;
+        right: -30px;
+        top: -10px;
       }
 
       #{$self}__quip-arrow {
