--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -91,6 +91,10 @@ $header_breakpoint_2: 600px;
     }
   }
 
+  &__skill-orbit {
+    margin: 0 auto 25px auto;
+  }
+
   &__content-mobile-container {
     display: none;
 
