Add mobile skill orbit

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -58,6 +58,7 @@ $border-radius: 7px;
 $ipad-air: 820px;
 $ipad-pro: 1024px;
 $mobile: 500px;
+$mobile_sm: 375px;
 
 /* -------------------------------------------------------------------------- */
 /*                                   Columns                                  */
